--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,6 +20,8 @@ html
         a(href='allocationslist') Allocations
       li
         a(href='entrieslist') Entries
+      li
+        a(href='clientlist') Clients
   block content
 
 
