Added Google Charts to render data in Views

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,6 +22,8 @@ html
         a(href='entrieslist') Entries
       li
         a(href='clientlist') Clients
+      li
+        a(href='test') Test
   block content
 
 
