--- a/views/index.jade
+++ b/views/index.jade
@@ -3,10 +3,7 @@ extends layout
 block content
   #content
   .container
-    .center
-      h1 trafficLIVE Dash <br /><br />
-        .index-img
-          img.img-rounded(src= "/images/tl_window.png" width="400px" align="center")   
+      include ./job_gauges.jade 
   .row.marketing
     .col-lg-6
      
