--- a/views/timesheets.jade
+++ b/views/timesheets.jade
@@ -41,7 +41,7 @@ html
       var options = {
       bar: {groupWidth: "80%"},
       width: 900,
-      height: 1400,
+      height: 600,
       chart: {
       title: 'Timesheets this week',
       },
@@ -54,4 +54,6 @@ html
       });
       }
   body
-    #barchart_material(style='width: 900px; height: 500px;')
+    .row.jobs
+    .col-lg-4.col-md-4.col-sm-6.col-xs-4.meow.guagebottom
+          #barchart_material(style='width: 900px; height: 500px')
