--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,9 @@ html
     title= title
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
     script(src='/javascripts/bootstrap.min.js')
+    script(type='text/javascript', src='https://www.gstatic.com/charts/loader.js')
+    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+    script(src='/javascripts/jquery.csv.js')
     link(rel='stylesheet', href='/stylesheets/custom.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
@@ -12,18 +15,6 @@ html
     ul.nav.nav-pills.pull-left
       li.active
         a(href='/') trafficLIVE DASH
-      li
-        a(href='employeelist') Employees
-      li
-        a(href='joblist') Jobs
-      li
-        a(href='allocationslist') Allocations
-      li
-        a(href='entrieslist') Entries
-      li
-        a(href='clientlist') Clients
-      li
-        a(href='test') Test
   block content
 
 
