--- a/views/timesheets.jade
+++ b/views/timesheets.jade
@@ -29,7 +29,7 @@ html
       // this has to be a global function
       function drawChart() {
       // grab the CSV
-      $.get('/csv/employees.csv', function(csvString) {
+      $.get('/csv/timesheets.csv', function(csvString) {
       // transform the CSV string into a 2-dimensional array
       var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
       // this new DataTable object holds all the data
