Cleaned up script requests. Network performance is now much quicker

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,14 +2,12 @@ doctype html
 html
   head
     title= title
-    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js')
+    script(src='/javascripts/jquery-3.2.1.min.js')
     script(src='/javascripts/bootstrap.min.js')
     script(type='text/javascript', src='https://www.gstatic.com/charts/loader.js')
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
     script(src='/javascripts/jquery.csv.js')
     link(rel='stylesheet', href='/stylesheets/custom.css')
     link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap-theme.min.css')
   body
 .header
     ul.nav.nav-pills.pull-left
@@ -18,16 +16,3 @@ html
   block content
 
 
-<script src="/javascripts/bootstrap/affix.js"></script>
-<script src="/javascripts/bootstrap/alert.js"></script>
-<script src="/javascripts/bootstrap/dropdown.js"></script>
-<script src="/javascripts/bootstrap/tooltip.js"></script>
-<script src="/javascripts/bootstrap/modal.js"></script>
-<script src="/javascripts/bootstrap/transition.js"></script>
-<script src="/javascripts/bootstrap/button.js"></script>
-<script src="/javascripts/bootstrap/popover.js"></script>
-<script src="/javascripts/bootstrap/carousel.js"></script>
-<script src="/javascripts/bootstrap/scrollspy.js"></script>
-<script src="/javascripts/bootstrap/collapse.js"></script>
-<script src="/javascripts/bootstrap/tab.js"></script>
-      
