--- a/views/timesheets.jade
+++ b/views/timesheets.jade
@@ -20,7 +20,7 @@ html
       width:  100%
       }
     script(type='text/javascript', src='https://www.gstatic.com/charts/loader.js')
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+    script(src='/javascripts/jquery-3.2.1.min.js')
     script(src='/javascripts/jquery.csv.js')
     script(type='text/javascript').
       // load the visualization library from Google and set a listener
