--- a/views/job_gauges.jade
+++ b/views/job_gauges.jade
@@ -1,7 +1,7 @@
 html
   head
     script(type='text/javascript', src='/javascripts/loader.js')
-    script(src='https://code.jquery.com/jquery-3.2.1.min.js')
+    script(src='/javascripts/jquery-3.2.1.min.js')
     script(src='/javascripts/jquery.csv.js')
     script(type='text/javascript').
       google.charts.load('current', {'packages':['gauge']});
