--- a/views/timesheets.jade
+++ b/views/timesheets.jade
@@ -43,7 +43,7 @@ html
       width: 900,
       height: 600,
       chart: {
-      title: 'Timesheets this week',
+      title: '',
       },
       bars: 'horizontal', // Required for Material Bar Charts.
       };
@@ -53,7 +53,24 @@ html
       chart.draw(data, google.charts.Bar.convertOptions(options));
       });
       }
+    script(type='text/javascript').
+      google.charts.load('current', {'packages':['corechart']});
+      google.charts.setOnLoadCallback(drawChart);
+      function drawChart() {
+      // grab the CSV
+      $.get('/csv/timesheets_expected.csv', function(csvString) {
+      // transform the CSV string into a 2-dimensional array
+      var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
+      // this new DataTable object holds all the data
+      var options = {title: 'Timesheets This Week'};
+
+      var data = new google.visualization.arrayToDataTable(arrayData);
+      var chart = new google.visualization.PieChart(document.getElementById('piechart'));
+      chart.draw(data, options);
+      });
+      }
   body
     .row.jobs
+        #piechart(style='width: 900px; height: 500px;')
     .col-lg-4.col-md-4.col-sm-6.col-xs-4.meow.guagebottom
           #barchart_material(style='width: 900px; height: 500px')
